--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 textx = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
+coverage = "^5.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
