--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ textx = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
 coverage = "^5.5"
+black = "^20.8b1"
 
 [build-system]
 requires = ["poetry>=0.12"]
