--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ authors = ["Bruno Morais <brunosmmm@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.10"
 textx = "^4.2.2"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^5.5"
-black = "^20.8b1"
+black = "^25.1.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
